fixed projects spacing

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -1,6 +1,6 @@
 .appContentWrapper {
 	display: flex;
-	min-height: 100%;
+	/* min-height: 100%; */
 	flex-direction: column;
 }
 
@@ -8,6 +8,7 @@
 	display: flex;
 	margin: auto;
 	max-width: 1140px;
+	/* max-height: 100vh; */
 	width: 100%;
 	flex: 1;
 }
